# mystery_box

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
data/: image_values.parquet  mystery_box_dataset.parquet
data/mystery_box/: gps_data.parquet  mystery_box_dataset.parquet
data/mystery_box/images/: metadata.jsonl
data/raw/Session22/: 20221019-171139 - Rondje 22.gpx
notebooks/: 1_GPS_data_check.ipynb  2_create_dataset_distance_detector.ipynb  3_train_donut_model.ipynb  4_infer_all_frames.ipynb  5_analyse.ipynb
