[tool.poetry]
name = "mystery-box"
version = "0.1.0"
description = "Solving the mystery_box problem"
authors = ["Dennis Bakhuis <dennis@bakhuis.nu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mystery_box"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.5.0"
pandas = "^1.5.1"
gpxpy = "^1.5.0"
matplotlib = "^3.6.2"
pyarrow = "^10.0.0"
folium = "^0.13.0"
opencv-python = "^4.6.0.66"
pillow = "^9.3.0"
pigeonxt-jupyter = "^0.6.1"
tqdm = "^4.64.1"
datasets = "^2.6.1"
sentencepiece = "^0.1.97"
transformers = "^4.24.0"
protobuf = "3.20"
joblib = "^1.2.0"
torch = "^1.13.0"
huggingface-hub = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
